# J1

./: .gitignore  Cargo.toml  LICENSE  build.rs
.cargo/: config.toml
j1-fw/: Cargo.toml  build.rs  memory.x
j1-fw/src/: main.rs
j1-fw/src/modules/: accelerometer.rs  lis302dl.rs  mod.rs
j1-fw/src/tasks/: accel_mon.rs  heartbeat.rs  mod.rs  usb.rs
j1-fw/src/utils/: button_mon.rs  mod.rs
j1-host/: Cargo.toml
j1-postcard/: Cargo.toml
j1-postcard/src/: lib.rs
src/: main.rs
src/modules/: accelerometer.rs  lis302dl.rs  mod.rs
src/tasks/: accel_mon.rs  accelerometer.rs  heartbeat.rs  mod.rs  usb.rs
src/utils/: button_mon.rs
