[package]
name = "j1"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "j1"
test = false
bench = false

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.6"
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"]}
embassy-stm32 = { version = "0.1.0", features = ["unstable-pac","memory-x", "time-driver-any", "exti", "chrono", "stm32f407vg"] }
# embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-time = "0.3.0"
# embassy-usb = "0.1.0"
# embedded-hal = "1.0.0"
# embedded-io = "0.6.1"
panic-halt = "0.2.0"
