[package]
name = "j1"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "j1"
test = false
bench = false

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.6"
defmt-rtt = "0.4.1"
embassy-embedded-hal = "0.1.0"
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"]}
embassy-futures = "0.1.1"
embassy-stm32 = { version = "0.1.0", features = ["defmt", "unstable-pac","memory-x", "time-driver-any", "exti", "chrono", "stm32f407vg"]}
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-time = "0.3.0"
embassy-usb = { version = "0.2.0", features = ["defmt"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
panic-halt = "0.2.0"
static_cell = "2.1.0"
