[package]
name = "j1"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "j1"
test = false
bench = false

[dependencies]
embassy-stm32 = { version = "0.1.0", features = ["defmt", "unstable-pac","memory-x", "time-driver-any", "exti", "chrono", "stm32f407vg"]}
embassy-embedded-hal = "0.1.0"
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"]}
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-time = "0.3.0"
embassy-usb = { version = "0.2.0", features = ["defmt"] }

postcard = {version = "1.0.8", features = ["experimental-derive"] }
postcard-rpc = {version = "0.6.0", features = ["embassy-usb-0_2-server"] }

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.6"
defmt-rtt = "0.4.1"
static_cell = "2.1.0"
panic-halt = "0.2.0"

j1-postcard = { path = "../j1-postcard" }
embedded-hal-async = "1.0.0"

[profile.release]
debug = 2
lto = true
opt-level = 's'
codegen-units = 1
incremental = false

[patch.crates-io]
embassy-stm32        = { git = "https://github.com/embassy-rs/embassy", rev = "2766993099b6604739ae25724aa2f6a9877d9902" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "2766993099b6604739ae25724aa2f6a9877d9902" }
embassy-executor     = { git = "https://github.com/embassy-rs/embassy", rev = "2766993099b6604739ae25724aa2f6a9877d9902" }
embassy-sync         = { git = "https://github.com/embassy-rs/embassy", rev = "2766993099b6604739ae25724aa2f6a9877d9902" }
embassy-time         = { git = "https://github.com/embassy-rs/embassy", rev = "2766993099b6604739ae25724aa2f6a9877d9902" }
embassy-usb          = { git = "https://github.com/embassy-rs/embassy", rev = "2766993099b6604739ae25724aa2f6a9877d9902" }
embassy-usb-driver   = { git = "https://github.com/embassy-rs/embassy", rev = "2766993099b6604739ae25724aa2f6a9877d9902" }
